--- a/TitanFit/pom.xml
+++ b/TitanFit/pom.xml
@@ -18,6 +18,14 @@
     	<artifactId>jbcrypt</artifactId>
     	<version>0.4</version>
 	</dependency>
+	
+<!--Jcalendar-->	
+	<dependency>
+    <groupId>com.toedter</groupId>
+    <artifactId>jcalendar</artifactId>
+    <version>1.4</version>
+</dependency>
+
 </dependencies>
   
   <build>
